# raze

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  grammar.txt  rename_files.ps1
arc-script/: lexer.arc  test_lexer.arc
crates/frontend/: Cargo.toml  build.txt
crates/frontend/src/: ast.rs  ast_pretty_print.rs  callable.rs  environment.rs  expr.rs  expr_rc.rs  interpreter.rs  lexer.rs  lib.rs  native_functions.rs  parser.rs  resolver.rs  results.rs  stmt.rs  test_parser.rs  utils.rs  values.rs
crates/frontend/src/ast/: ast_pretty_print.rs  expr.rs  stmt.rs
crates/frontend/src/parser/: test_parser.rs  utils.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/repl/: Cargo.toml
crates/resolver/: Cargo.toml
crates/rizon-frontend/: Cargo.toml
crates/rizon-frontend/src/: lexer.rs  lib.rs  parser.rs
crates/rizon-frontend/src/ast/: ast_pretty_print.rs  expr.rs  stmt.rs
crates/rizon-frontend/src/parser/: test_parser.rs  utils.rs
crates/rizon-main/: Cargo.toml
crates/rizon-runtime/: Cargo.toml
crates/rizon-static-analysis/: Cargo.toml
crates/rizon-static-analyzer/: Cargo.toml
crates/rizon-tools/: Cargo.toml
crates/runtime/: Cargo.toml
crates/tools/: Cargo.toml
crates/utils/: Cargo.toml
examples/: test.rev  test.rz  test_blocks.rz  test_lexer.rz  test_parser.rz
tests/: launch_benchmarks.py  launch_tests.py
tests/assignement/: associacivity.rz  global.rev  global.rz  grouping.rev  grouping.rz  infix_operator.rz  lambda.rz  local.rev  prefix_operator.rev  syntax.rev  syntax.rz  to_bool.rev  to_builtin.rz  to_float.rev  to_int.rev  to_self.rev  to_str.rev  to_undeclared.rz  undefined.rev
tests/benchmark/: equality.rev  equality.rz  fib.rev  fib.rz  instanciation.rev  invocation.rz  properties.rz  string_equality.rev  string_equality.rz  zoo.rz
tests/benchmark_results/: benchmark_20240723-191106  benchmark_20240723-192603
tests/block/: empty.rev  scope.rev  syntax.rev  syntax.rz
tests/bool/: not.rev
tests/call/: bool.rev  float.rev  instance.rz  int.rev  null.rz  num.rev  string.rz
tests/field/: many.rev  (+32 more)
web/: index.html
(+274 files in other folders)
