[workspace]
resolver = "1"

members = [
    "crates/*"
]

# For profiling
# [profile.release]
# debug = true

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.0"
ecow = "0"
thiserror = "1.0"
rizon-frontend = { path = "crates/rizon-frontend" }
rizon-static-analyzer = { path = "crates/rizon-static-analyzer" }
rizon-runtime = { path = "crates/rizon-runtime" }
rizon-tools = { path = "crates/rizon-tools" }