[package]
name = "phy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontend = { path = "../frontend" }
runtime = { path = "../runtime" }
resolver = { path = "../resolver" }
clap = { workspace = true }
colored = { workspace = true }
