[package]
name = "rizon-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rizon-tools = { workspace = true }
colored = { workspace = true }
ecow = { workspace = true }
thiserror = { workspace = true }
